[gd_scene load_steps=4 format=3 uid="uid://player123456"]

[ext_resource type="Script" path="res://src/entities/player_tank.gd" id="1_player01"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_player"]
size = Vector2(28, 28)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_player"]
size = Vector2(28, 28)

[node name="PlayerTank" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 47
script = ExtResource("1_player01")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_player")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0.8, 0, 1)
texture = SubResource("PlaceholderTexture2D_player")

[node name="ShootPoint" type="Marker2D" parent="."]
position = Vector2(0, -16)

[node name="CooldownTimer" type="Timer" parent="."]
